Fixed: make sure the create new menu is visible above and below the #columns

--- a/design/admin/stylesheets/pagelayout.css
+++ b/design/admin/stylesheets/pagelayout.css
@@ -272,7 +272,6 @@ div.tabs-content.disabled div.tab-content
     position:relative;
     margin: 0 auto -1px;
     background: white;
-    overflow: hidden;
 }
 
 #maincolumn
